[gd_scene load_steps=3 format=3 uid="uid://f8k1l45txcj7"]

[ext_resource type="Script" path="res://scenes/MainScene/main.gd" id="1_fs5v7"]
[ext_resource type="PackedScene" uid="uid://bqbb5rxwd64ps" path="res://scenes/MainScene/Lobby.tscn" id="2_x66gp"]

[node name="Node" type="Node"]
script = ExtResource("1_fs5v7")

[node name="Levels" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/Polygon/Polygon.tscn")
spawn_path = NodePath("../Levels")
spawn_limit = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/Control/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Lobby" parent="CanvasLayer/Control/SubViewportContainer/SubViewport" instance=ExtResource("2_x66gp")]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -6.0
offset_right = 174.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4

[node name="join" type="Button" parent="CanvasLayer/Control/HBoxContainer/Control"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "JOIN
"

[node name="Control2" type="Control" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4

[node name="host" type="Button" parent="CanvasLayer/Control/HBoxContainer/Control2"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -15.5
offset_right = 25.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "HOST
"

[node name="Control3" type="Control" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Control/HBoxContainer/Control3"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Control/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Control2/host" to="." method="_on_host_pressed"]
